# scope-creep-gateway

./: .gitignore  ARCHITECTURE.md  FREELANCER_GUIDE.md  README.md  railway.toml  requirements.txt
app/: .env.sample  .gitignore  app.py  classifier.py  manifest.json  mode.py  nixpacks.toml  pyproject.toml  requirements-deploy.txt  requirements-dev.txt  requirements.txt
app/db/: __init__.py  schema.sql  supabase_client.py
app/listeners/: __init__.py
app/services/: __init__.py  absorbed.py  billing_status.py  brief_extractor.py  brief_template.py  brief_update.py  canvas_model.py  canvas_resolver.py  canvas_sync.py  canvas_updater.py  capacity.py  change_order_drafter.py  change_order_flow.py  change_orders.py  classifier_prompts.py  classifier_router.py  clients.py  deliverables.py  drafter_prompts.py  embedding_cache.py  embedding_gate.py  ephemeral_updates.py  freelancer_client.py  import_brief_flow.py  message_text.py  mockup_classifier.py  operation_locks.py  prefilter.py  project_context.py  projects.py  reply_drafter.py  retention.py  revisions.py  rts_search.py  scope_canvas.py  scope_extractor.py  scope_health.py  scope_warnings.py  setup_brief_draft_cache.py  slack_canvas.py  (+4 more)
app/tests/: test_absorbed.py  test_billing_status.py  test_brief_template.py  test_canvas_resolver.py  test_capacity.py  test_change_order_idempotency.py  test_change_orders.py  test_classifier_gate.py  test_classifier_router.py  test_client_report.py  test_deliverables.py  test_embedding_gate.py  test_embedding_gate_corpus.py  test_manual_change_order.py  test_message_text.py  (+17 more)
(+52 files in other folders)
